--- a/react-app/src/context/Modal.css
+++ b/react-app/src/context/Modal.css
@@ -21,4 +21,9 @@
 #modal-content {
     position: absolute;
     background-color: white;
+    min-width: 400px;
+    max-width: 450px;
+    width: 20%;
+    min-height: min-content;
+    border-radius: 20px;
 }
