--- a/react-app/src/components/SplashPage/SplashPageComponent3.css
+++ b/react-app/src/components/SplashPage/SplashPageComponent3.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    max-width: 2460px;
+    max-width: 2560px;
     height: 92vh;
     background-color: #243043;
     object-fit: cover;
@@ -25,7 +25,7 @@
 }
 
 .splash-component-3-title {
-    font-size: 5.5rem;
+    font-size: 4.5rem;
     font-weight: bolder;
     color: white;
     padding: -5% 0%;
@@ -55,4 +55,16 @@
 
 .splash-component-3-inner-right.text {
     color: white;
+}
+
+@media (max-width: 950px) {
+    .splash-component-3-title {
+        font-size: 2.5rem;
+    }
+    .splash-component-3-outer-container {
+        height: 50vh;
+    }
+    .splash-component-3-text-container {
+        padding-right: 5%;
+    }
 }
