--- a/react-app/src/components/DashboardLeft/DashboardLeftClasses.css
+++ b/react-app/src/components/DashboardLeft/DashboardLeftClasses.css
@@ -118,7 +118,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: #7fc1ff;
+    background-color:#8c9caa;
     /* color of the scroll thumb */
     border-radius: 20px;
     /* roundness of the scroll thumb */
