--- a/react-app/src/components/ClassCard/ClassCard.css
+++ b/react-app/src/components/ClassCard/ClassCard.css
@@ -1,6 +1,6 @@
 .class-card-container {
     text-decoration: none;
-    color: white;
+    color: rgb(165, 165, 165);
     display:flex;
     align-items: center;
     padding: 0% 4%;
@@ -16,6 +16,7 @@
 .class-card-container.active {
     border-left: 5px solid rgb(255, 255, 255);
     text-decoration: none;
+    color: white;
 }
 .class-card-image-container {
     display: flex;
