--- a/react-app/src/components/LogInFormModal/LogInFormModal.css
+++ b/react-app/src/components/LogInFormModal/LogInFormModal.css
@@ -91,7 +91,7 @@
     align-items: center;
     justify-content: center;
     color: red;
-    min-height: max-content;
+    min-height: min-content;
     height: 60px;
 
 }
@@ -102,8 +102,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-bottom: 5px;
     color: red;
     min-height: max-content;
+    min-height: min-content;
     height: 60px;
     will-change: opacity;
     animation: fadeIn 2s cubic-bezier(0.165, 0.840, 0.440, 1.000) both;
@@ -115,6 +117,7 @@
 }
 
 .log-in-error {
+    text-align: center;
     padding:2% 0%;
 }
 
