get, create, delete for feature 3 implemented. still need to implement cdreate and edit in correct locations, then complete browse deck functionality

--- a/react-app/src/components/DasboardRightAboutPage/DashboardRightAboutPage.css
+++ b/react-app/src/components/DasboardRightAboutPage/DashboardRightAboutPage.css
@@ -29,6 +29,7 @@
 .dashboard-right-about-text-body {
     color: #8c9caa;
     line-height: 1.5rem;
+    white-space: pre-line;
     margin: 1% 3%;
     min-height: 5vh;
 }
