--- a/react-app/src/components/Dashboard/Dashboard.css
+++ b/react-app/src/components/Dashboard/Dashboard.css
@@ -1,7 +1,8 @@
 .dashboard-outer-container {
     display: flex;
     width: 100%;
-    min-height: min-content;
+    min-height: max-content;
+    max-height: 100vh;
     height: 100vh;
 }
 
