features 3 and 4 complete. bugfixing and additional styling still required

--- a/react-app/src/components/PreviewCards/PreviewCard.css
+++ b/react-app/src/components/PreviewCards/PreviewCard.css
@@ -81,7 +81,8 @@
 }
 
 .preview-card-edit-delete {
-    display: flex;
+    display: flex;flex-direction: column-reverse;
+    justify-content: flex-end;
     align-items: center;
     color: #a6a6a6;
     padding-left: 2rem;
