--- a/react-app/src/components/CreateCardModal/CreateCardForm.css
+++ b/react-app/src/components/CreateCardModal/CreateCardForm.css
@@ -5,3 +5,20 @@
     height: 200px;
 
 }
+
+
+.fa-pencil.edit-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+}
+
+.fa-pencil.edit-card:hover {
+    cursor: pointer;
+    color: #3384ab;
+    background-color: #e2e2e2;
+}
