reset redux state on logout to prevent login issues

--- a/react-app/src/components/LogInFormModal/LogInFormModal.css
+++ b/react-app/src/components/LogInFormModal/LogInFormModal.css
@@ -70,7 +70,8 @@
     justify-content: center;
     color: red;
     min-height: min-content;
-    height: 120px;
+    height: min-content;
+    padding: 0.5rem 0;
 }
 
 .log-in-form-errors.signup.inner {
