--- a/react-app/src/components/DashboardRightCards/DashboardRightCards.css
+++ b/react-app/src/components/DashboardRightCards/DashboardRightCards.css
@@ -7,25 +7,48 @@
     align-items: center;
 }
 
-.dashboard-right-class-navlink-container-cards {
+.dashboard-right-class-navlink-container-cards.deck {
     display: flex;
     align-items: center;
     padding-right: 1rem;
     text-decoration: none;
     color: #707070;
 }
+
+.dashboard-right-class-icon-decks {
+    width: 60%;
+    background-color: rgbe(0,0,0,0);
+}
+
+.dashboard-right-class-navlink-container-cards.deck:hover {
+    cursor: pointer;
+    color: #31a8dd;
+    background-color: #f7f7f7;
+}
+
+@media screen and (max-width: 1100px) {
+    .dashboard-right-cards-top-container {
+        display: flex;
+        height: min-content;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 1rem;
+    }
+}
+
 .dashboard-right-class-navlink-container-cards:hover {
     cursor: pointer;
     text-decoration: none;
     color: #707070;
 }
 
-.dashboard-right-class-top-go-back-container.cards {
-}
+.dashboard-right-class-top-go-back-container.cards {}
 
 .dashboard-right-cards-container {
     height: 100%;
 }
+
 .dashboard-right-class-icon-container-cards {
     display: flex;
     justify-content: center;
@@ -43,15 +66,19 @@
     height: 40px;
 }
 
-
-.dashboard-right-class-name-cards {
-
+/* .dashboard-right-class-name-cards {
+    height: 100%;
 }
+
+.dashboard-right-class-name-cards:hover {
+    color: #31a8dd;
+} */
 
 .dashboard-right-deck-name-cards {
     font-size: 1.5rem;
     font-weight: bold;
     color: #197096;
+    text-align: center;
 }
 
 .dashboard-right-deck-number-cards {
