--- a/react-app/src/components/DashboardRightClasses/DashboardRightClasses.css
+++ b/react-app/src/components/DashboardRightClasses/DashboardRightClasses.css
@@ -2,11 +2,13 @@
 
 .dashboard-right-class-top-container {
     display: flex;
+    align-items: center;
     width: 100%;
-    height: 20vh;
-    min-height: 170px;
+    height: min-content;
+    min-height: 19vh;
     min-width: 450px;
     background-color: white;
+    margin-bottom: 1vh;
 }
 
 .dashboard-right-class-icon-container {
@@ -24,6 +26,7 @@
 }
 
 .dashboard-right-class-name-container {
+    min-height: min-content;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -196,7 +199,7 @@
 .dashboard-right-class-navlink.active {
     text-decoration: none;
     font-weight: bold;
-    color: black;
+    color: rgb(94, 94, 94);
     border-bottom: 5px solid #9cb0c4;
 }
 
