--- a/react-app/src/components/DeleteClassModal/DeleteClassForm.css
+++ b/react-app/src/components/DeleteClassModal/DeleteClassForm.css
@@ -15,6 +15,7 @@
     font-size: 0.9rem;
     text-align: center;
     line-height: 1.5rem;
+    word-break: break-word;
 }
 
 .delete-class-buttons-container {
