--- a/react-app/src/components/BrowsingDeck/BrowsingDeck.css
+++ b/react-app/src/components/BrowsingDeck/BrowsingDeck.css
@@ -38,12 +38,14 @@
 
 .dashboard-right-browse-card-container {
     width: 100%;
-    height: 90%;
+    height:80%;
+    max-height: 90%;
     border-radius: 10px;
     box-shadow: 0 0 5px rgba(0,0,0,0.1);
 }
 
 .dashboard-right-browse-body-container {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -63,6 +65,7 @@
     width: 80%;
     height: 100%;
     padding: 0 10%;
+    overflow-y: auto;
 }
 
 .dashboard-right-browse-body-card.none {
@@ -200,4 +203,12 @@
     font-weight: normal;
     font-size: 0.9rem;
     height: 0.9rem;
+}
+
+@media screen and (max-width: 1100px) {
+    .dashboard-right-browse-body-container {
+        min-width: 300px;
+        width: 80%;
+        height: 80vh;
+    }
 }
