--- a/react-app/src/components/DasboardRightAboutPage/DashboardRightAboutPage.css
+++ b/react-app/src/components/DasboardRightAboutPage/DashboardRightAboutPage.css
@@ -32,6 +32,7 @@
     white-space: pre-line;
     margin: 1% 3%;
     min-height: 5vh;
+    word-break: break-word;
 }
 
 .dashboard-right-about-page-edit-buttons {
