--- a/react-app/src/components/DeckCard/DeckCard.css
+++ b/react-app/src/components/DeckCard/DeckCard.css
@@ -3,7 +3,8 @@
     align-items: center;
     justify-content: space-between;
     width: 90%;
-    height: 5rem;
+    min-height: 5rem;
+    height: min-content;
     padding: 1rem 3%;
     border-bottom: 1px solid #c3d0dd;
     color: #197096;
@@ -22,12 +23,13 @@
 }
 
 .deck-card-nav-container {
-    width: 100%;
+    width: 70%;
     text-decoration: none;
     color: #197096;
 }
 
 .deck-card-name {
+    word-break: break-word;
     overflow: hidden;
     text-overflow: ellipsis;
     font-size: 1.5rem;
@@ -59,7 +61,21 @@
     justify-content: space-between;
     text-align: center;
     height: 100%;
-    width: 400px;
+    min-width: 150px;
+}
+
+.fa-ellipsis.deck-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    min-width: 30px;
+    width: 30px;
+}
+
+.fa-ellipsis.deck-card:hover {
+    background-color: #e4e4e4;
+    border-radius: 15px;
 }
 
 .edit-delete-deck-button {
@@ -72,6 +88,10 @@
     100% {scale: 100%; opacity: 100;}
 }
 
+
+.edit-class-save-button.delete-deck:hover {
+    background-color: #bfc5c9;
+}
 
 .edit-class-save-button.delete-deck{
     background-color: #8c9caa;
@@ -91,7 +111,25 @@
     text-align: end;
     width: 4rem;
 }
+
 .fa-chevron-right.deck-card {
     font-size: 1.5rem;
     width: 100%;
+}
+
+.fa-chevron-right.deck-card:hover {
+    color:#31a8dd;
+}
+
+@media screen and (max-width: 1200px) {
+    .class-card-edit-delete-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        text-align: center;
+        height: 100%;
+        min-width: 150px;
+        width: 30%;
+    }
 }
