adjustments made to characters remaining on all pages to include trimmed submission, fixed creating a deck with spaces as the objective, fixed resetting mastery for classes without decks or cards

--- a/react-app/src/components/DasboardRightAboutPage/DashboardRightAboutPage.css
+++ b/react-app/src/components/DasboardRightAboutPage/DashboardRightAboutPage.css
@@ -87,3 +87,9 @@
 .edit-about-class-form-error {
 
 }
+
+.about-character-counts {
+    margin: 0% 3%;
+    margin-top: 1%;
+    font-size: 0.8rem;
+}
