--- a/react-app/src/components/CreateClassModal/CreateClassForm.css
+++ b/react-app/src/components/CreateClassModal/CreateClassForm.css
@@ -33,3 +33,10 @@
     justify-content: center;
     padding-bottom: 0%;
 }
+
+.create-characters-remaining {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding: 0 3rem;
+}
